playbooks/roles/platform/files/wordpress/wordpress-ns.yaml
#Create the wordpress namespace
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress
