playbooks/roles/platform/files/wordpress/wordpress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wordpress-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - hosts:
    - "splunk-uat.hpcs.wellsfargo.net"
    port:
      number: 80
      name: http-wordpress
      protocol: HTTP 
  - hosts:
    - "splunk-uat.hpcs.wellsfargo.net"
    port:
      number: 443
      name: https-wordpress
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: wellsfargo-ca-tls-secret
